<resources>
    <string name="app_name">Socialem</string>
    <string name="login_hello">Ingresa a tu cuenta de Socialem</string>
    <string name="user_hint">Ingresa tu username</string>
    <string name="email_hint">Ingresa tu correo electrónico</string>
    <string name="password_hint">Ingresa tu contraseña</string>
    <string name="forget_password">¿Olvidaste tu contraseña?</string>
    <string name="hello_again">¡HOLA DE NUEVO!</string>
    <string name="register">REGISTRO </string>
    <string name="politica">Aceptar terminos &amp; condiciones &amp; politica de privacidad</string>
    <string name="app_name_uppercase">SOCIALEM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="array_name">
        <item>Array Item One</item>
        <item>Array Item Two</item>
        <item>Array Item Three</item>
    </string-array>
</resources>